# labs

./: README.md
algorithms/Sorts/1selection/: Makefile  selection.cpp
algorithms/Sorts/2insertion/: Makefile  insertion.cpp
algorithms/Sorts/quickSort/: Makefile  quick.cpp
algorithms/binary_search/: Makefile  binary_search_in_range.hpp  test.cpp
algorithms/max_sub_array/: Makefile  max_sub_array.hpp  test.cpp
algorithms/reverse/: Makefile  reverse.cpp
cpp/: createRandomSymbolsFile.cpp
cpp/algorithms/applications/union_find_percolation_threshold/: Dockerfile  README.md  create_container.sh  run_container.sh
cpp/algorithms/applications/union_find_percolation_threshold/src/: MatrixIndexer.hpp  tests.cpp
cpp/algorithms/merge_sort/: README.md  create_container.sh  run_container.sh
cpp/algorithms/merge_sort/src/: Makefile  merge_sort.hpp  tests.cpp
cpp/algorithms/union_find/: Dockerfile  README.md  create_container.sh  run_container.sh
cpp/algorithms/union_find/src/: Makefile  UnionMatrix.hpp  main.cpp  tests.cpp
cpp/code_analyses/: Dockerfile  README.md  create_container.sh  run_container.sh
cpp/code_analyses/src/: CMakeLists.txt  start.sh  tests.cpp
cpp/conditionVariableExample/: Makefile  ThreadStack.hpp  main.cpp  tests.cpp
cpp/coordinates_generator/: generator.hpp  test.cpp  tests  tests.cpp
cpp/interview/external_merge_sort/: Dockerfile  README.md  create_container.sh  run_container.sh
cpp/interview/external_merge_sort/src/: Makefile  functionality.hpp  tests.cpp
cpp/interview/generate_parenthesis/: README.md  create_container.sh  run_container.sh
cpp/interview/generate_parenthesis/src/: Makefile  functionality.hpp  tests.cpp
cpp/move_research/: Dockerfile  README.md  create_container.sh  run_container.sh
cpp/move_research/src/: CMakeLists.txt  Counter.cpp  Counter.hpp  ICounter.hpp  RuleOfFiveBehaviourLogger.hpp  tests.cpp
cpp/operators/: Makefile  Oper.hpp  main.cpp
cpp/try_allocator/: Dockerfile  README.md  create_container.sh  run_container.sh
cpp/try_allocator/src/: Makefile  allocator.hpp  test_allocator_in_set.cpp  test_allocator_in_vector.cpp  test_allocator_traits.cpp  tests.cpp
cpp/try_boost_graph/: GraphVisitor.hpp  Makefile  run.sh  test.cpp  tests.cpp
elisp/: alphabet.el  class.el  extractclass.el  more_examples.el  my-grep.el  my-wrap.el  my_make_map.el
promela/: Makefile  student.spin
python/dummy_example/: Dockerfile  counter.py  test_counter.py
